force-app/main/default/objects/QR_Bill_Account_Settings__c/QR_Bill_Account_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>QR Bill Account Settings</label>
</CustomObject>