force-app/main/default/objects/QR_Bill_Account_Settings__c/fields/Account_country__c.field-meta.xml
<CustomField>
    <fullName>Account_country__c</fullName>
    <label>Account country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>