force-app/main/default/objects/QR_Bill_Account_Settings__c/fields/Account_house_number__c.field-meta.xml
<CustomField>
    <fullName>Account_house_number__c</fullName>
    <label>Account house number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>