force-app/main/default/objects/QR_Bill_Account_Settings__c/fields/Account_name__c.field-meta.xml
<CustomField>
    <fullName>Account_name__c</fullName>
    <label>Account name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>