force-app/main/default/objects/QR_Bill_Account_Settings__c/fields/Account_postal_code__c.field-meta.xml
<CustomField>
    <fullName>Account_postal_code__c</fullName>
    <label>Account postal code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>