force-app/main/default/objects/QR_Bill_Account_Settings__c/fields/Account_street__c.field-meta.xml
<CustomField>
    <fullName>Account_street__c</fullName>
    <label>Account street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>