force-app/main/default/objects/QR_Bill_Account_Settings__c/fields/Account_town__c.field-meta.xml
<CustomField>
    <fullName>Account_town__c</fullName>
    <label>Account town</label>
    <length>255</length>
    <type>Text</type>
</CustomField>