force-app/main/default/objects/QR_Bill_Account_Settings__c/fields/Creditor_account__c.field-meta.xml
<CustomField>
    <fullName>Creditor_account__c</fullName>
    <label>Creditor account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>