force-app/main/default/objects/QR_Bill_Account_Settings__c/fields/Creditor_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Creditor_Reference_Number__c</fullName>
    <label>Creditor Reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>