force-app/main/default/objects/QR_Bill_Account_Settings__c/fields/DE_Description__c.field-meta.xml
<CustomField>
    <fullName>DE_Description__c</fullName>
    <label>DE Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>