force-app/main/default/objects/QR_Bill_Account_Settings__c/fields/EN_Description__c.field-meta.xml
<CustomField>
    <fullName>EN_Description__c</fullName>
    <label>EN Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>