force-app/main/default/objects/QR_Bill_Account_Settings__c/fields/FR_Description__c.field-meta.xml
<CustomField>
    <fullName>FR_Description__c</fullName>
    <label>FR Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>